feat: add logos for homer

--- a/configs/homer/config.yml
+++ b/configs/homer/config.yml
@@ -10,33 +10,33 @@ services:
     icon: "fas fa-network-wired"
     items:
       - name: "Jellyfin"
-        logo: "assets/tools/jellyfin.png"
+        logo: "assets/logos/jellyfin.png"
         subtitle: "Media Player"
         tag: "Media"
         url: "http://10.0.0.10:8096"
         target: "_blank"
 
       - name: "qBittorrent"
-        logo: "assets/tools/qbittorrent.png"
+        logo: "assets/logos/qbittorrent.png"
         subtitle: "Downloader"
         tag: "Downloads"
         url: "http://10.0.0.10:8080"
         target: "_blank"
 
       - name: "Portainer"
-        logo: "assets/tools/portainer.png"
+        logo: "assets/logos/portainer.png"
         subtitle: "Docker Manager"
         url: "http://10.0.0.10:9000"
         target: "_blank"
 
       - name: "Scrutiny"
-        logo: "assets/tools/scrutiny.png"
+        logo: "assets/logos/scrutiny.png"
         subtitle: "HDD Health"
         url: "http://10.0.0.10:8081"
         target: "_blank"
 
       - name: "Homebridge"
-        logo: "assets/tools/homebridge.png"
+        logo: "assets/logos/homebridge.png"
         subtitle: "Smart Home"
         url: "http://10.0.0.10:8581"
         target: "_blank"
@@ -54,25 +54,25 @@ services:
     icon: "fas fa-shield-alt"
     items:
       - name: "Jellyfin (Remote)"
-        logo: "assets/tools/jellyfin.png"
+        logo: "assets/logos/jellyfin.png"
         subtitle: "Media Player"
         url: "https://home-server.taild50569.ts.net:8097"
         target: "_blank"
 
       - name: "qBittorrent (Remote)"
-        logo: "assets/tools/qbittorrent.png"
+        logo: "assets/logos/qbittorrent.png"
         subtitle: "Downloader"
         url: "https://home-server.taild50569.ts.net:8082"
         target: "_blank"
 
       - name: "Portainer (Remote)"
-        logo: "assets/tools/portainer.png"
+        logo: "assets/logos/portainer.png"
         subtitle: "Docker Manager"
         url: "https://home-server.taild50569.ts.net:9001"
         target: "_blank"
 
       - name: "Homebridge (Remote)"
-        logo: "assets/tools/homebridge.png"
+        logo: "assets/logos/homebridge.png"
         subtitle: "Smart Home"
         url: "https://home-server.taild50569.ts.net:8582"
         target: "_blank"
