--- a/configs/homer/config.yml
+++ b/configs/homer/config.yml
@@ -35,6 +35,12 @@ services:
         url: "http://10.0.0.10:8081"
         target: "_blank"
 
+      - name: "Beszel"
+        icon: "assets/logos/beszel.png"
+        subtitle: "Resource Monitor"
+        url: "http://10.0.0.10:8090"
+        target: "_blank"
+
       - name: "Homebridge"
         logo: "assets/logos/homebridge.png"
         subtitle: "Smart Home"
@@ -69,6 +75,12 @@ services:
         logo: "assets/logos/portainer.png"
         subtitle: "Docker Manager"
         url: "https://home-server.taild50569.ts.net:9001"
+        target: "_blank"
+
+      - name: "Beszel (Remote)"
+        icon: "assets/logos/beszel.png"
+        subtitle: "Resource Monitor"
+        url: "https://home-server.taild50569.ts.net:8090"
         target: "_blank"
 
       - name: "Homebridge (Remote)"
