--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -116,3 +116,26 @@ services:
     devices:
       # Hardware Acceleration (Intel QuickSync)
       - /dev/dri:/dev/dri
+
+  # Beszel Hub - Web Dashboard
+  beszel-hub:
+    image: henrygd/beszel:latest
+    container_name: beszel-hub
+    restart: unless-stopped
+    ports:
+      - 8090:8090
+    volumes:
+      - ~/home-server-data/beszel/hub:/beszel_data
+
+  # Beszel Agent - Resource Monitoring
+  beszel-agent:
+    image: henrygd/beszel-agent:latest
+    container_name: beszel-agent
+    restart: unless-stopped
+    network_mode: host
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+      - /:/host:ro
+    environment:
+      - PORT=45876
+      - KEY=${BESZEL_AGENT_KEY}
