feat: add beszel resource monitor

--- a/configs/caddy/Caddyfile
+++ b/configs/caddy/Caddyfile
@@ -26,6 +26,11 @@ home-server.taild50569.ts.net:8582 {
     reverse_proxy localhost:8581
 }
 
+home-server.taild50569.ts.net:8090 {
+    tls /etc/caddy/certs/cert.pem /etc/caddy/certs/key.pem
+    reverse_proxy localhost:8090
+}
+
 # This handle Local Network (HTTP Port 80)
 http://10.0.0.10, http://home-server.local {
     reverse_proxy localhost:81
