--- a/configs/homer/config.yml
+++ b/configs/homer/config.yml
@@ -36,7 +36,7 @@ services:
         target: "_blank"
 
       - name: "Beszel"
-        icon: "assets/logos/beszel.png"
+        logo: "assets/logos/beszel.png"
         subtitle: "Resource Monitor"
         url: "http://10.0.0.10:8090"
         target: "_blank"
@@ -78,7 +78,7 @@ services:
         target: "_blank"
 
       - name: "Beszel (Remote)"
-        icon: "assets/logos/beszel.png"
+        logo: "assets/logos/beszel.png"
         subtitle: "Resource Monitor"
         url: "https://home-server.taild50569.ts.net:8091"
         target: "_blank"
