--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -98,11 +98,7 @@ services:
     image: lscr.io/linuxserver/jellyfin:latest
     container_name: jellyfin
     restart: unless-stopped
-    ports:
-      - 8096:8096
-      - 8920:8920 # SSL Port (Optional)
-      - 7359:7359/udp # Discovery (Optional)
-      - 1900:1900/udp # DLNA (Optional)
+    network_mode: host
 
     environment:
       - PUID=1000
